# lidar_tracker

./: CMakeLists.txt  README.md  package.xml  plugins.xml
cfg/: covmat.cfg
config/: tracking.yaml
include/lidar_tracker/: LidarTracker.h  point_types.h
launch/: lidar_tracker.launch
msg/: Track.msg
rviz/: uav1.rviz
src/: lidar_tracker.cpp
tmux/simulation/: session.yml
